the courses notification and list, now shows the logo of the course

--- a/app/views/notifications/student_assignment_added.erb
+++ b/app/views/notifications/student_assignment_added.erb
@@ -1,3 +1,10 @@
+<% if course.logo_file.xxsmall.url %>
+<div class="img">
+  <a href="<%= course_path(course) %>">
+    <img src="<%= course.logo_file.xxsmall.url %>" rel="tip" title="<% course.name %>">
+  </a>
+</div>
+<% end %>
 <%= I18n.t 'notifications.assignment_added'%> <a href="<%= assignment_path(assignment) %>"><%= assignment.name %></a> 
 <%= I18n.t 'notifications.for_the_course'%> <a href="<%= course_path(course) %>"><%= course.name %></a>.
 <a href="<%= assignment_path(assignment) %>" class="notification-link"><%= I18n.t('notifications.show_assignment') %> &gt;&gt;</a>
