--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -27,8 +27,15 @@
         <% @courses.each do |course| %>
          <div class="course-detail <%= cycle("odd", "even")%>">
            <div class="span4">
-            <h4><%= link_to(course.name, course_path(course)) %></h4>
-            <p><%= course.reference %></p>
+            <% if course.logo_file.xxsmall.url%>
+            <div class="left" style="padding-right: 2px;">
+              <%= link_to image_tag(course.logo_file.xxsmall.url), course_path(course) %>
+            </div>
+            <% end %>
+            <div class="left">
+              <h4><%= link_to(course.name, course_path(course)) %></h4>
+              <p><%= course.reference %></p>
+            </div>
            </div>
            <div class="span1"><span class="label-tag notice course-notification"><a href="<%= course_path(course) %>">2 <%= image_tag("notification.png") %></a></span></div>
          </div>
