--- a/app/views/notifications/course_discussion_added.erb
+++ b/app/views/notifications/course_discussion_added.erb
@@ -1,3 +1,11 @@
+<% if course.logo_file.xxsmall.url %>
+<div class="img">
+  <a href="<%= course_path(course) %>">
+    <img src="<%= course.logo_file.xxsmall.url %>" rel="tip" title="<% course.name %>">
+  </a>
+</div>
+<% end %>
+
 <%= I18n.t 'notifications.discussion_added'%> <a href="<%= discussion_path(discussion) %>"><%= discussion.title %></a> 
 <%= I18n.t 'notifications.for_the_course'%> <a href="<%= course_path(course) %>"><%= course.name %></a>.
 <a href="<%= discussion_path(discussion) %>"  class="notification-link"><%= I18n.t('notifications.show_discussion') %> &gt;&gt;</a>
