--- a/app/views/surveys/_survey_fields.html.erb
+++ b/app/views/surveys/_survey_fields.html.erb
@@ -3,6 +3,7 @@
   <%= form.input :description, :input_html => { 'data-editor' => true, :rows => 5, :class => "span6"} %>
   <%= form.input :value, :input_html => {:class => "span6"} %>
   <%= form.input :period, :as => :select, :collection => [1,2,3,4,5,6,7,8], :prompt => t("formtastic.actions.select_one") %>
+  <li><label><%= t('courses.assignments.start_at') %></label><%= form.datetime_select(:start_at) %></li>
   <li><label><%= t('courses.assignments.date_time') %></label><%= form.datetime_select(:due_to) %></li>
 <% end %>
 
