surveys now have a start date

--- a/app/views/surveys/_survey.html.erb
+++ b/app/views/surveys/_survey.html.erb
@@ -5,15 +5,16 @@
     <div class="survey-values">
       <%= t('.value') %>: <b><%= survey.value %></b> -
       <%= t('.period') %>: <b><%= survey.period %></b> -
-      <%= t('.date_time') %>: <b><%= l survey.due_to, :format => :short %></b>
-      <%= current_user.role_for_course(@course) %>
       <% if current_user.role_for_course(@course) == 'teacher' %>
         <% if survey.unpublished? %>
-          <%= link_to t('.publish'), publish_survey_path(survey), 'data-new-state' => t('.published'), :class => 'publish-survey' %>
+          <%= t('.unpublished')%> -
+          <%= t('.start_at') %>: <b><%= l survey.start_at, :format => :short %></b>
         <% else %>
-          <%= t('.published') %>
+          <%= t('.published') %> -
+          <%= t('.date_time') %>: <b><%= l survey.due_to, :format => :short %></b>
         <% end %>
       <% else %>
+        <%= t('.date_time') %>: <b><%= l survey.due_to, :format => :short %></b> -
         <%= link_to t('.answer'), new_survey_reply_path(survey) unless !current_user.student? %>
       <% end %>
     </div>
