--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -24,10 +24,11 @@
         <h2><%= t('.header') %></h2>
         <%= semantic_form_for @survey do |form| %>
           <%= render :partial => 'survey_fields', :locals => {:form => form} %>
-          <%= form.buttons do %>
-            <%= form.commit_button :button_html => {:class => 'btn right'} %>
-            <%= form.commit_button :button_html => {:class => 'btn right'}, :label => t('formtastic.actions.update_and_publish') %>
-          <% end %>
+          <div class="actions">
+            <%= form.buttons do %>
+              <%= form.commit_button :button_html => {:class => 'btn right'} %>
+            <% end %>
+          </div>
         <% end %>
       </div>
       <div class="span3" style="margin:0;">
