--- a/app/views/comments/_comment_comments.html.erb
+++ b/app/views/comments/_comment_comments.html.erb
@@ -1,3 +1,3 @@
-<% commentable.comments.order("created_at ASC").each do |comment| %>
+<% commentable.comments.order("created_at DESC").each do |comment| %>
   <%= render :partial => 'comments/comment_tpl' , :locals => {:comment => comment}%>
 <% end %>
