--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -1,6 +1,6 @@
 <%= semantic_form_for @course do |form| %>
   <%= form.inputs :file do %>
-    <li class='preview'><img src="<%= @course.logo_file.thumb.url %>" /></li>
+    <li class='preview'><img src="<%= @course.course_logo_file.thumb.url %>" /></li>
     <%= form.input :logo_file, :as => :file, :input_html => {'data-upload-path' => upload_logo_for_courses_path} %>
     <%= form.input :logo_file_cache, :as => :hidden %>
   <% end %>
