--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -27,9 +27,9 @@
         <% @courses.each do |course| %>
          <div class="course-detail <%= cycle("odd", "even")%>">
            <div class="span4">
-            <% if course.logo_file.xxsmall.url%>
+            <% if course.course_logo_file.xxsmall.url%>
             <div class="left" style="padding-right: 2px;">
-              <%= link_to image_tag(course.logo_file.xxsmall.url), course_path(course) %>
+              <%= link_to image_tag(course.course_logo_file.xxsmall.url), course_path(course) %>
             </div>
             <% end %>
             <div class="left">
