--- a/app/views/notifications/course_discussion_added.erb
+++ b/app/views/notifications/course_discussion_added.erb
@@ -1,10 +1,8 @@
-<% if course.logo_file.xxsmall.url %>
 <div class="img">
   <a href="<%= course_path(course) %>">
-    <img src="<%= course.logo_file.xxsmall.url %>" rel="tip" title="<% course.name %>">
+    <img src="<%= course.course_logo_file.xxsmall.url %>" rel="tip" title="<% course.name %>">
   </a>
 </div>
-<% end %>
 
 <%= I18n.t 'notifications.discussion_added'%> <a href="<%= discussion_path(discussion) %>"><%= discussion.title %></a> 
 <%= I18n.t 'notifications.for_the_course'%> <a href="<%= course_path(course) %>"><%= course.name %></a>.
