--- a/app/views/notifications/student_course_accepted.erb
+++ b/app/views/notifications/student_course_accepted.erb
@@ -1,9 +1,7 @@
-<% if course.logo_file.xxsmall.url %>
 <div class="img">
   <a href="<%= course_path(course) %>">
-    <img src="<%= course.logo_file.xxsmall.url %>" rel="tip" title="<% course.name %>">
+    <img src="<%= course.course_logo_file.xxsmall.url %>" rel="tip" title="<% course.name %>">
   </a>
 </div>
-<% end %>
 
 <%= I18n.t 'notifications.you_where_accepted_for_course' %> <a href="<%= course_path(course) %>"><%= course.name %></a>.
