--- a/app/views/student_mailer/accepted_on_course.html.erb
+++ b/app/views/student_mailer/accepted_on_course.html.erb
@@ -1,5 +1,5 @@
 <h2 class="h2">Hola <%=@student.name%>!</h2>
-<h3 class="h3">¡Tienes una nueva notificación!</h3><br>
+<h3 class="h3">¡Enhorabuena!</h3><br>
 <strong>Tu profesor ha aprobado tu ingreso al curso <%= @course.name%>!</strong>
 <br>
 <h1> <%= link_to 'Ver Curso >>', course_url(@course, :subdomain => @subdomain) %></h1>
