fixed the bug where the labels are not shown on assignments and discussions

--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -288,10 +288,10 @@ color: #BFBFBF;
 }
 
 /*.wall label, */
-.assignments label,
-.discussions label {
-	display: none;
-}
+/*.assignments label,*/
+/*.discussions label {*/
+/*	display: none;*/
+/*}*/
 
 .wall .actions, 
 .assignments .actions,
