--- a/app/views/home/_members.html.erb
+++ b/app/views/home/_members.html.erb
@@ -3,7 +3,7 @@
 </div>
   <ul class="nav-member-avatars">
     <% @users.each do |user| %>
-      <li><%= link_to(image_tag(user.avatar_file.xxsmall.url), user_path(user), :rel => "tip", :title => user.name) %></li>
+      <li><%= link_to(image_tag(user.avatar_file.xxsmall.url), user_path(user), :rel => "dashboard-tip", :title => user.name) %></li>
     <% end %>
   </ul>
   <%= link_to t(".all_members"), network_members_path %>
