--- a/app/views/shared/_assets_fields_for_comment.html.erb
+++ b/app/views/shared/_assets_fields_for_comment.html.erb
@@ -22,3 +22,4 @@
   <%= link_to t('courses.add_asset'), '#', :class => 'btn small info add_record left', :style => 'display:none' %>
   <%= form.commit_button :label => t('forms.leave_comment'), :button_html => {:id => :submit, :class => "btn right"}, :wrapper_html => {:class=>"right"} %>
 </fieldset>
+<%= link_to t('comments.insert_multimedia'), 'javascript:void(0)',:rel => "tooltip", :class => 'small left', :title => "#{t('comments.tooltip')}" %>
