--- a/app/views/home/_members.html.erb
+++ b/app/views/home/_members.html.erb
@@ -2,8 +2,10 @@
   <h2><%= t(".members")%></h2>
 </div>
   <ul class="nav-member-avatars">
-    <% @users.each do |user| %>
-      <li><%= link_to(image_tag(user.avatar_file.xxsmall.url), user_path(user), :rel => "dashboard-tip", :title => user.name) %></li>
+    <% if @users %>
+      <% @users.each do |user| %>
+        <li><%= link_to(image_tag(user.avatar_file.xxsmall.url), user_path(user), :rel => "dashboard-tip", :title => user.name) %></li>
+      <% end %>
     <% end %>
   </ul>
   <%= link_to t(".all_members"), network_members_path %>
