--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -1300,3 +1300,30 @@ display: block;
   float: none !important;
   border-bottom: 1px solid #ddd !important;
 }
+
+/*viewer styles*/
+.viewer{
+	position: fixed;
+	  top: 5%;
+	  left: 20%;
+	  width: 800px;
+	  margin: 0 0 0 0;
+	  background-color: #ffffff;
+	  border: 1px solid #999;
+	  border: 1px solid rgba(0, 0, 0, 0.3);
+	  *border: 1px solid #999;
+	  /* IE6-7 */
+
+	  -webkit-border-radius: 6px;
+	  -moz-border-radius: 6px;
+	  border-radius: 6px;
+	  -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+	  -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+	  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+	  -webkit-background-clip: padding-box;
+	  -moz-background-clip: padding-box;
+	  background-clip: padding-box;
+}
+#content-pane{
+	top:25px !important;
+}
