se agrego table_builder para generar calendario, se creo calendario en el dashboar que coloca examenes y tareas en el día de entrega del usuario

--- a/app/views/course_requests/index.html.erb
+++ b/app/views/course_requests/index.html.erb
@@ -15,7 +15,7 @@
                 <%= image_tag request.user.avatar_file.xsmall.url %>
               </div>
               <div class="span4">
-                <%= link_to(request.user.name, user_path(request.user)) %><br />
+                <%= link_to(request.user.name, user_path(request.user)) %></br>
                 <%= request.user.email %>
               </div>
               <div class="span4">
