--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -1,3 +1,4 @@
+
 <div class="container">
   <div class="content">
     <div class="row">
@@ -50,27 +51,75 @@
       <div class="all-courses"><%= link_to(t('dashboard.view_all_courses'), courses_path, :class => "btn") %></div>
       <%= render :partial => "members" %>
     </div>
-    
-    <div class="span-two-thirds">
-      <div class="dashboard-box">
-        <div class="underline padding-top">
-          <h2><%= t('notifications.header') %></h2>
-        </div>
-        <div id="notifications">
-          <% @notifications.each do |notification| %>
-            <div class='notification'>
-              <div class="date-published"><%= time_ago_in_words(notification.created_at) %></div>
-              <%= raw notification.text %>
-            </div>
-          <% end %>
-          <%= paginate @notifications %>
-        </div>
-      </div>
-  
+     <div class="span-two-thirds">
+    	<div class="tabs">   
+	    	<ul class="tabs">
+	    	   <li class="active"><a href="#tab1" data-toggle="tab"><%= t('calendar') %></a></li>
+	           <li ><a href="#tab2" data-toggle="tab"><%= t('notifications.header') %></a></li>
+	    		
+	    	</ul>
+	    		<div class="tab-content">
+					<div class="tab-pane active" id="tab1">
+	    			<div class="row with line">
+                    	<center>
+                        <h2>
+                            <%= link_to "<", :month => (@date.beginning_of_month-1).strftime("%m/%Y") %>
+						    <%=h @date.strftime("%B de %Y") %>
+						    <%= link_to ">", :month => (@date.end_of_month+1).strftime("%m/%Y") %>
+                        </h2>
+                        </center>
+                        <div id="calendar">
+	                  
+						        <%= calendar_for(@tasks, :year => @date.year , :month => @date.month) do |t| %>				
+						        <%= t.head('sunday','monday', 'tuesday', 'wednesday', 'thursday', 'friday', 'saturday' )%>
+						        <%= t.day(:day_method => :due_to) do |day, tasks| %>
+						    
+						        <%= day.day %></br>
+						        
+						        <ul>
+								        <% for task in tasks %>
+							   	<div class="row with line">
+								       <li>  <a rel="tip" data-original-title='<%= sanitize task.description, :tags => %w(a)  %>'><%=link_to h(raw task.name), task %></a></li>
+								</div> 
+								        <% end %>
+								</ul>
+						       
+						  <% end %>
+						<% end %>
+	               </div>
+	              
+	             </div>
+	             </div>
+	    			<div class="tab-pane" id="tab2">
+		            <div class="row with line">
+	    	 			<div class="dashboard-box">
+		        			<div class="underline padding-top">
+		          				<h2><%= t('notifications.header') %></h2>
+		        			</div>
+		        			<div id="notifications">
+		          			<% @notifications.each do |notification| %>
+		            		<div class='notification'>
+		              			<div class="date-published"><%= time_ago_in_words(notification.created_at) %></div>
+		              			<%= raw notification.text %>
+		            		</div>
+		          			<% end %>
+		          			<%= paginate @notifications %>
+		        		</div>
+		      		</div>
+	    		</div>
+	          </div>
+	
+	    			
+	    </div>
+	   
+      
+     </a>
+   
+ 
     </div>
-
+     
     </div>
   </div>
-
+ <div>
   <%= render :partial => "shared/footer" %>
 </div>
