--- a/app/views/supervisor/shared/_admin_menu.html.erb
+++ b/app/views/supervisor/shared/_admin_menu.html.erb
@@ -7,5 +7,8 @@
   <%= teachers_notification_tab(@pending_teachers_total, tab) %>
   <%= tab.students t('.students'), supervisor_students_path %>
   <%= tab.new_user t('.new_user'), supervisor_new_user_path %>
-  <li><%= link_to(t('.reports'), "#") %></li>
+   <li><%= link_to(t('.reports'), "#") %></li>
+   <li><%= link_to(t('.social_network'), "#") %></li>
+   <li><%= link_to(t('.activities'), "#") %></li>
+   <li><%= link_to(t('.reports_of_fail'), "#") %></li>
 <% end %>
