--- a/app/views/shared/_document_viewer.html.erb
+++ b/app/views/shared/_document_viewer.html.erb
@@ -4,11 +4,10 @@
     <h3><%= asset.name %></h3>
   </div>
   <div class="modal-body" >
-     <!-- <iframe id="viewer" src="http://docs.google.com/gview?url=http://<%= request.host+':3000' + asset.file.url%>&embedded=true" style="width:760px; height:500px;" frameborder="0"></iframe>-->
-	 <iframe id="viewer" src="http://<%= request.host+':3000' + asset.file.url%>" style="width:760px; height:500px;" frameborder="0"></iframe>
+     <iframe id="viewer" src="http://docs.google.com/gview?url=http://<%= request.host + asset.file.url%>&embedded=true" style="width:760px; height:500px;" frameborder="0"></iframe>
   </div>
   <div class="modal-footer">
-    <a href="#" class="btn danger" data-dismiss="modal" ><%= t('close')%></a>
+    <!-- <a href="#" class="btn danger" data-dismiss="modal" ><%= t('close')%></a> -->
 	<%= link_to t('download'), asset.file.url , :class =>'btn info'%>
   </div>
 </div>
