--- a/app/views/supervisor/shared/_courses.html.erb
+++ b/app/views/supervisor/shared/_courses.html.erb
@@ -26,7 +26,7 @@
            </div>
          </div>
          <div class="span3" style="margin:0;">
-           <%= render :partial => "shared/adds" %>
+             <%= render :partial => "shared/publicity" %>
          </div>
        </div>
       
