--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,27 +5,40 @@
  *= require_self
  *= require_tree . 
 */
+
+
+/* this is a part of a calendar in the css this part work with modifications in
+ jquery and a modificarion in watu_table_builder gem in rails*/
+
 #calendar table {
   border-collapse: collapse;
   width: 100%;
-
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+   border-top-left-radius: 4px;
+   border-top-right-radius: 4px;
+   border-bottom-right-radius: 4px;
+   border-bottom-left-radius: 4px;
+ 
 }
 
 #calendar td,
 #calendar th {
-  font-family: "Lucida Grande",arial,helvetica,sans-serif;
+  font-family: helvetica,sans-serif;
   font-size: 10px;
   padding: 6px;
-  border-radius: 15px solid #1DE9D4;
-  
+  border-radius: 15px solid;
+ 
+
 }
 
 #calendar th {
-  background: #5687AF;
+  background: #028190;
   color: #fff;
   text-align: center;
   width: 14.2857142857143%;
-  
+
 }
 
 #calendar td {
@@ -34,16 +47,16 @@
   background-color:#fff;
   height: 80px;
   vertical-align: top;
-  font-size: 16px;
-  
+  font-size: 11px;
+
 }
 
 #calendar .notday{
 	background-color: #1494CF;
 }
 #calendar .notmonth {
-  color: #fff;
-  background-color: #ccc;
+  color: #ccc;
+  background-color: #f2f2f2;
 }
 
 #calendar #month {
@@ -55,8 +68,8 @@
 #calendar #month a, #calendar #month a:hover {
   text-decoration: none;
   padding: 0 10px;
-  color: #fff;
-  
+  color: #000;
+
 }
 
 
@@ -68,15 +81,54 @@
 }
 
 #calendar ul {
-  margin: 1;
+  color: #00afc9;
+  margin: 0;
   margin-top: 5px;
-  padding: 1;
+  padding: 0;
   list-style: none;
 }
 
 #calendar li {
+
   margin: 0;
   padding: 0;
-  font-size: 8px;
-  text-align: center;
+  font-size: 10px;
+  
+}
+#containertor{
+	display:default;
+	width : 170px;
+	height : 370px;	
+}
+*#chat{
+display:default;
+width : 170px;
+height : 350px;	
+}*
+#chat_body{
+             	border : solid 0px #ccc;
+	            background : #fff;
+	            color : #000;
+	            padding : 4px;
+	            width : 170px;
+				height : 300px;
+	            overflow : auto;
+	            text-align: justify;
+	            
+}
+#chat_footer{
+	background : #D7F2FF;
+}
+#timer_chat{
+	color: #ccc;
+    text-align: right;
+}
+#user_chat{
+	color:#339BB9;
+}
+#btn-chat{
+	float:right;
+}
+#chat_title h2{
+	color:#00AFC9;
 }
