--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,4 +1,5 @@
-<div class="container">
+
+<div id='container' class="container">
   <div class="content">
     
     <div class="row">
@@ -36,8 +37,10 @@
           <%= render :partial => 'course', :collection => @courses %>
         </div>
       </div>
+     
       <div class="span3" style="margin:0;">
-        <%= render :partial => "shared/adds" %>
+	    
+        <%= render :partial => "shared/publicity" %>
       </div>
     </div>
     <% end %>
