--- a/app/views/discussions/index.html.erb
+++ b/app/views/discussions/index.html.erb
@@ -47,8 +47,8 @@
 
       </div>
     
-      <div class="span3">
-      
+      <div class="span3"style="margin:0;" >
+      <%= render :partial => 'shared/adds'%>
       </div>
     </div>
     
