--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -22,7 +22,7 @@
       </div>
 
       <div class="span3" style="margin:0;">
-        
+          <%= render :partial => "shared/publicity" %>
       </div>
     </div>
   </div>
