--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -61,7 +61,7 @@
       </div>
 
       <div class="span3" style="margin:0;">
-        <%= render :partial => "shared/adds" %>
+       <%= render :partial => "shared/publicity" %>
       </div>
     </div>
   </div>
