--- a/app/views/users/wall.html.erb
+++ b/app/views/users/wall.html.erb
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="span3" style="margin:0;">
-        <%= render :partial => "shared/adds" %>
+         <%= render :partial => "shared/publicity" %>
       </div>
     </div>
     
