--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= stylesheet_link_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/redmond/jquery-ui.css", "application" %>
   <%= javascript_include_tag 'jquery' %>
      <%= javascript_include_tag 'application' %>
-     <%= javascript_include_tag 'http://fayeredis.herokuapp.com/faye.js' %>
+     <%= javascript_include_tag 'http://cursatest.com/faye.js' %>
      <%= javascript_include_tag 'rails' %>
    <%= csrf_meta_tag %>
   <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
