--- a/app/views/shared/_document_viewer.html.erb
+++ b/app/views/shared/_document_viewer.html.erb
@@ -4,7 +4,7 @@
     <h3><%= asset.name %></h3>
   </div>
   <div class="modal-body" >
-     <iframe id="viewer" src="http://docs.google.com/gview?url=http://<%= asset.file.url%>&embedded=true" style="width:760px; height:500px;" frameborder="0"></iframe>
+     <iframe id="viewer" src="http://docs.google.com/gview?url=<%= asset.file.url%>&embedded=true" style="width:760px; height:500px;" frameborder="0"></iframe>
   </div>
   <div class="modal-footer">
     <!-- <a href="#" class="btn danger" data-dismiss="modal" ><%= t('close')%></a> -->
