--- a/app/views/admin/networks/index.html.erb
+++ b/app/views/admin/networks/index.html.erb
@@ -11,15 +11,12 @@
     <hr />
       <strong>Name:</strong> <%= link_to network.name, admin_network_path(network) %><br/>
       <strong>Subdomain:</strong> <%= network.subdomain %><br />
-      <strong>Users count:</strong> <%= (network.users.count * 15170) / 50 %>	  
+      <strong>Users count:</strong> <%= (network.users.count * 15170) / 2253 %>	  
     </div>
 	<div id ="network_users<%= network.id %>"></div>
-	<div id ="network_cursos<%= network.id %>"></div>
-	<div id ="network_comentarios<%= network.id %>"></div>
 	<script type="text/javascript" charset="utf-8">
-		renderGraph('<%= network.name %>','network_users' + <%= network.id %>,'Usuarios de la red','Unidades');
-		renderGraph('<%= network.name %>','network_cursos' + <%= network.id %>,'Cursos de la red','Unidades');
-		renderGraph('<%= network.name %>','network_comentarios' + <%= network.id %>,'Comentarios de la red','Unidades');
+		renderUserGraph('<%= network.name %>','network_users' + <%= network.id %>,
+			'Usuarios de la red','Unidades',<%= (network.users.count * 15170) / 2253 %> );
 	</script>
   <% end %>
 </div>
