cambio del analitics en las redes

--- a/app/views/admin/base/statistics.html.erb
+++ b/app/views/admin/base/statistics.html.erb
@@ -21,7 +21,7 @@
   <tbody>
     <tr>
       <td><%= t('super_admin.statistics.total_networks') %></td>
-      <td><%= (Network.count * 15170)/2253 %></td>
+      <td><%= Network.count %></td>
     </tr>
     <tr>
       <td><%= t('super_admin.statistics.total_users') %></td>
