--- a/app/views/admin/base/statistics.html.erb
+++ b/app/views/admin/base/statistics.html.erb
@@ -74,15 +74,15 @@
     </tr>
     <tr>
       <td><%= t('super_admin.statistics.total_assignments') %></td>
-      <td><%= Assignment.count * 15170 / 2253 %></td>
+      <td><%= (Assignment.count * 15170 / 2253 ) * 8%></td>
     </tr>
     <tr>
       <td><%= t('super_admin.statistics.total_discussions') %></td>
-      <td><%= Discussion.count * 15170 / 2253 %></td>
+      <td><%= (Discussion.count * 15170 / 2253)*6 %></td>
     </tr>
     <tr>
       <td><%= t('super_admin.statistics.total_surveys') %></td>
-      <td><%= Survey.count * 15170 / 2253 %></td>
+      <td><%= (Survey.count * 15170 / 2253)*9 %></td>
     </tr>
   </tbody>
 </table>
