cambios para las graficas

--- a/app/views/admin/base/statistics.html.erb
+++ b/app/views/admin/base/statistics.html.erb
@@ -1,3 +1,4 @@
+<script src="http://code.highcharts.com/highcharts.js"></script>
 <h1><%= t('super_admin.shared.platform_statistics') %></h1>
 
 <h2><%= t('super_admin.statistics.networks_users') %></h2>
