--- a/app/views/students/deliveries/show.html.erb
+++ b/app/views/students/deliveries/show.html.erb
@@ -1,3 +1,14 @@
+<div class="modal hide" id="myModal" style="display:none;">
+ <div class="modal-header">
+   <a class="close" data-dismiss="modal" >×</a>
+   <h3>Ingresa la calificación</h3>
+   </p>   
+ </div>
+ <div class="modal-body">
+     <%= render :partial => "form_fields"%>
+</div>
+</div>
+
 <div class="container">
   <div class="content">
 
@@ -53,7 +64,13 @@
             <% if @assignment.due_to > DateTime.now and @delivery.user == current_user%>
               <%= link_to t('assignments.show.edit_delivery'), edit_assignment_delivery_path(@assignment), :id => 'edit_delivery', :class => 'btn info right small' %>
             <% end %>
-          </div>
+			
+			<% if current_user.role == 'teacher' %>
+                 <div class="btn"  data-toggle="modal" href="#myModal">Calificar Tarea</div>
+            <% end %>
+               
+         
+            </div>
         </div>
 
         <%= render :partial => 'shared/assets_table', :locals => {:record => @delivery} %>
@@ -68,7 +85,7 @@
             <%= render :partial => 'comments/comments', :locals => {:commentable => @delivery, :comments => @comments} %>
           </div>
         </div>
-
+        
 
       </div>
 
@@ -77,4 +94,5 @@
   </div>
 
 </div>
+
 
