cambios del paginador

--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,4 +1,4 @@
-<div class="comments">
+<div id="comments">
   <% comments.each do |comment| %>
     <%= render :partial => 'comments/comments_tpl', :locals => {:comment => comment}%>
   <% end %>
